--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,8 @@
 ">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://yourdomain.com/about/">
-  <link rel="alternate" type="application/rss+xml" title="The Awesome Site" href="http://yourdomain.com/feed.xml" />
+  <link rel="canonical" href="https://him2him2.github.io//about/">
+  <link rel="alternate" type="application/rss+xml" title="The Awesome Site2" href="https://him2him2.github.io//feed.xml" />
 </head>
 
 
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="/">The Awesome Site</a>
+    <a class="site-title" href="/">The Awesome Site2</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -83,12 +83,12 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">The Awesome Site</h2>
+    <h2 class="footer-heading">The Awesome Site2</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>The Awesome Site</li>
+          <li>The Awesome Site2</li>
           <li><a href="mailto:your-email@domain.com">your-email@domain.com</a></li>
         </ul>
       </div>
