--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>The Awesome Site</title>
+  <title>The Awesome Site2</title>
   <meta name="description" content="This is an awesome site. Know that this is going to change the world. Just you wait.
 ">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://yourdomain.com/">
-  <link rel="alternate" type="application/rss+xml" title="The Awesome Site" href="http://yourdomain.com/feed.xml" />
+  <link rel="canonical" href="https://him2him2.github.io//">
+  <link rel="alternate" type="application/rss+xml" title="The Awesome Site2" href="https://him2him2.github.io//feed.xml" />
 </head>
 
 
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="/">The Awesome Site</a>
+    <a class="site-title" href="/">The Awesome Site2</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -126,12 +126,12 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">The Awesome Site</h2>
+    <h2 class="footer-heading">The Awesome Site2</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>The Awesome Site</li>
+          <li>The Awesome Site2</li>
           <li><a href="mailto:your-email@domain.com">your-email@domain.com</a></li>
         </ul>
       </div>
